--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,19 +4,24 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-* {
-  background-color: #12161f;
-  margin: 5px 0px 5px 0px;
-  margin-top: 2;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-
-  color: white;
-  /* border: 1px solid red; */
+body {
+    font-family: 'Poppins', sans-serif;
 }
+
+/* *{ */
+    /* linear-gradient:60deg,#3a3a3a 0%,#1a1a1a 100% */
+    /* background: linear-gradient(60deg, #3a3a3a 0%, #1a1a1a 100%);} */
+
+
+  /* background-color: #12161f; */
+  /* margin: 5px 0px 5px 0px; */
+  /* margin-top: 2; */
+    /* margin-bottom: 0; */
+    /* margin-left: 0; */
+    /* margin-right: 0; */
+
+  /* color: white; */
+  /* border: 1px solid red; */
 
 @keyframes fade-in {
     from {
